fix menu close button being broken on RTL

--- a/static/css/devhub/new-landing/navigation.less
+++ b/static/css/devhub/new-landing/navigation.less
@@ -42,7 +42,7 @@
         flex-grow: 1;
 
         html[dir=rtl] & {
-          margin: 0 0 0 auto;
+          margin: 0;
         }
       }
 
